--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,6 +43,16 @@ body>div.container-fluid {
 	background-color: salmon;
 }
 
+form.citySearch .form-group {
+	flex: 1 1 auto;
+	margin-right: 10px;
+	margin-bottom: 0;
+}
+
+form.citySearch .form-group input.form-control {
+	width: 100%;
+}
+
 
 /* forecast area */
 
