--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,6 @@ body>div.container-fluid {
 
 .titleBar {
 	height: 70px;
-	background-color: lightblue;
 	align-items: center;
 	justify-content: center;
 	padding: 0 15px;
@@ -39,8 +38,8 @@ body>div.container-fluid {
 
 /* city selector area */
 
-.citySelectorArea {
-	background-color: salmon;
+form.citySearch {
+	margin-bottom: 15px;
 }
 
 form.citySearch .form-group {
@@ -53,9 +52,30 @@ form.citySearch .form-group input.form-control {
 	width: 100%;
 }
 
+ul.cityList {
+	display: none;
+	list-style-type: none;
+	padding: 0;
+	border: 3px solid;
+	border-radius: 15px;
+}
+
+ul.cityList li {
+	padding: 10px 15px;
+	cursor: pointer;
+}
+
+ul.cityList li:not(:first-child) {
+	border-top: 1px solid;
+}
+
+ul.cityList li:first-child {
+	border-radius: 10px 10px 0 0;
+}
+
+ul.cityList li:last-child {
+	border-radius: 0 0 10px 10px;
+}
+
 
 /* forecast area */
-
-.forecastArea {
-	background-color: yellow;
-}
