--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,7 +84,17 @@ ul.cityList li:first-child {
 ul.cityList li:last-child {
 	border-bottom-left-radius: 10px;
 	border-bottom-right-radius: 10px;
-	border-radius: 0 0 10px 10px;
+}
+
+ul.cityList li button.deleteButton {
+	background: transparent;
+	border: none;
+	display: none;
+}
+
+ul.cityList li:hover button.deleteButton {
+	outline: none;
+	display: block;
 }
 
 
